--- a/assets/sass/_404.scss
+++ b/assets/sass/_404.scss
@@ -1,6 +1,4 @@
 .page-404{
-  width: 100vw;
-  height: 100vh;
   @extend %image-background;
   font-family: 'Montserrat', sans-serif;
   color: #fefefe;
