--- a/assets/sass/_launchPage.scss
+++ b/assets/sass/_launchPage.scss
@@ -1,7 +1,5 @@
 .homepage-launch{
   display: block;
-  width: 100vw;
-  height: 100vh;
   @extend %image-background;
   font-family: 'Montserrat', sans-serif;
   .logo{
