--- a/assets/sass/_logout.scss
+++ b/assets/sass/_logout.scss
@@ -1,6 +1,4 @@
 .page-logout{
-  width: 100vw;
-  height: 100vh;
   position: relative;
   @extend %image-background;
   font-family: 'Montserrat', sans-serif;
